Bug 318420 - Clicking on a mailto link won't load the 'New Message' template
Summary: Clicking on a mailto link won't load the 'New Message' template
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.10.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-16 04:52 UTC by Bernhard Scheirle
Modified: 2013-04-16 07:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Scheirle 2013-04-16 04:52:12 UTC
Clicking on a mailto link won't load the default nor custom 'New Message' template.

Reproducible: Always

Steps to Reproduce:
1. Click on a mailto link
Actual Results:  
Composer opens with an empty body. (Exception: The signature may be imported.)

Expected Results:  
The default or custom template for a new message should be loaded.
Comment 1 Laurent Montel 2013-04-16 05:26:20 UTC
how do you configure your default template ?
(work fine here)
Comment 2 Bernhard Scheirle 2013-04-16 05:35:34 UTC
default template:
Settings -> Configure KMail … -> E-Mail-Editor -> Standard Templates -> New Message: 

%REM="Standardvorlage für neue Nachrichten"%-
%BLANK

Test

or: custom Template:
Settings -> Configure KMail … -> Identities -> [selecht id] -> Modifiy… -> Templates -> Use custom mess… ✔ -> New Message
Comment 3 Bernhard Scheirle 2013-04-16 05:55:37 UTC
Workaround:
Click on a mailto link -> Switch Identity -> Template is used
Comment 4 Bernhard Scheirle 2013-04-16 06:10:06 UTC
Just that there are no misunderstandings: I mean mailto links embedded in a webpage (like my name here) and not in an email.
Comment 5 Laurent Montel 2013-04-16 06:20:44 UTC
ok but what is result ?
it uses an other template ?
"%REM="Standardvorlage für neue Nachrichten"%- %BLANK" will show a empty message

so what is your result ?
Comment 6 Bernhard Scheirle 2013-04-16 06:36:42 UTC
The template looks like this: "%REM="Standardvorlage für neue Nachrichten"%- %BLANK\n\nTest" and normally it outputs "\n\nTest".

But if I click on a mailto link no template is used, therefore the output is nothing: ""
Comment 7 Laurent Montel 2013-04-16 06:55:14 UTC
Ok I can reproduce it.
Will look at .
Comment 8 Laurent Montel 2013-04-16 07:16:43 UTC
Git commit ec8cbc5864de031133b74f5e3895bcd187d7830d by Montel Laurent.
Committed on 16/04/2013 at 09:15.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 318420 - Clicking on a mailto link won't load the 'New Message' template

FIXED-IN: 4.10.3

M  +2    -3    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/ec8cbc5864de031133b74f5e3895bcd187d7830d