Fix Bug 318420 - Clicking on a mailto link won't load the 'New Message' template

FIXED-IN: 4.10.3
BUG: 318420